--- a/package.json
+++ b/package.json
@@ -216,6 +216,13 @@
     "lint": "eslint ./src",
     "prepare": "husky"
   },
+
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
+  
   "author": "",
   "license": "ISC",
   "description": ""
